--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.twitter.ambrose</groupId>
     <artifactId>ambrose</artifactId>
-    <version>0.3.1-T1-SNAPSHOT</version>
+    <version>0.3.1-T1</version>
     <relativePath>..</relativePath>
   </parent>
 
