--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.twitter.ambrose</groupId>
     <artifactId>ambrose</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.4.0</version>
     <relativePath>..</relativePath>
   </parent>
 
