--- a/pom.xml
+++ b/pom.xml
@@ -375,6 +375,18 @@
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.8.1</version>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+              <configuration>
+                <!-- disable lint warnings in Java 8 -->
+                <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+              </execution>
+          </executions>
         </plugin>
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
