--- a/scalding/pom.xml
+++ b/scalding/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.twitter.ambrose</groupId>
     <artifactId>ambrose</artifactId>
-    <version>0.4.3-SNAPSHOT</version>
+    <version>0.4.3</version>
     <relativePath>..</relativePath>
   </parent>
 
