--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -13,7 +13,7 @@
   <packaging>pom</packaging>
 
   <name>Ambrose</name>
-  <url>http://twitter.github.org/ambrose</url>
+  <url>https://twitter.github.org/ambrose</url>
   <inceptionYear>2012</inceptionYear>
   <description>
     Ambrose is a platform for visualization and real-time monitoring of data
@@ -30,7 +30,7 @@
 
   <organization>
     <name>Twitter</name>
-    <url>http://twitter.com/</url>
+    <url>https://twitter.com/</url>
   </organization>
 
   <developers>
